Fix collapsing fieldsets

--- a/sites/all/themes/wille/sass/component/_object_view.scss
+++ b/sites/all/themes/wille/sass/component/_object_view.scss
@@ -60,7 +60,8 @@
   }
 }
 
-.material-item {
+.material-item,
+.panel-pane {
   @include clearfix;
 }
 
